--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
       心にグッとくる「時」の魅力を、「あの手この手」で伝えてください。
     </p>
   </div>
-  <div class="right">
 
-    <h2 class="subtitle">体験</h2>
-
-  </div>
   <div class="sentou_mov">
     <div> <video src="茶道.mp4" loop controls poster="sadou.png"></video></div>
     <div>
+      <div class="right">
+
+        <h2 class="subtitle">体験</h2>
+
+      </div>
       <p>
         銭湯は人の温かさに浸れたり、人と人の時を繋げてくれたりする場所だと感じたので、そこで生まれる時を撮りました。銭湯は、あなたの街にもきっとある、湯と人の温かさを作る場所です。そこには時を超える物語と、時を繋ぐぬくもりがあります。そんな場所が作り出す時を、あなたものぞいてみて下さい。
       </p>
@@ -70,19 +71,26 @@
     <li><img src="img/5.jpg" alt=""></li>
 
   </ul> -->
-  <div class="imglist">
-    <ul class="images">
-      <li><img src="img/tea_img/DSC02027.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02030.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02040.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02050.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02070.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02084.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02087.jpg" alt=""></li>
-      <li><img src="img/tea_img/DSC02091.jpg" alt=""></li>
-    </ul>
-  </div>
+  <div class="imglists">
+    <div class="left">
 
+      <h2 class="subtitle">写真集</h2>
+
+    </div>
+
+    <div class="imglist">
+      <ul class="images">
+        <li><img src="img/tea_img/DSC02027.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02030.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02040.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02050.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02070.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02084.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02087.jpg" alt=""></li>
+        <li><img src="img/tea_img/DSC02091.jpg" alt=""></li>
+      </ul>
+    </div>
+  </div>
 
   <div class="right">
 
